<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VahanIndia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_slide_menu_new_car">New Car</string>
    <string name="str_slide_menu_used_car">Used Car</string>
    <string name="str_slide_menu_on_road">On Road Price</string>
    <string name="str_slide_menu_setting">Setting</string>
	<string name="str_slide_menu_about">About</string>
	<string name="str_slide_menu_feedback">Feedback</string>
	<string name="str_activity_search_new_car">Search New Car</string>
	<string name="str_activity_search_new_car_result">Results</string>
</resources>
