<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black" >

    <LinearLayout
        android:id="@+id/menu_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/slider_menu_new_car"
            style="@style/AppTheme_Slider_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/str_slide_menu_new_car" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/slider_menu_used_car"
            style="@style/AppTheme_Slider_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/str_slide_menu_used_car" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/slider_menu_on_road_car"
            style="@style/AppTheme_Slider_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/str_slide_menu_on_road" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/slider_menu_settings"
            style="@style/AppTheme_Slider_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/str_slide_menu_setting" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/slider_menu_about"
            style="@style/AppTheme_Slider_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/str_slide_menu_about" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/slider_menu_feedback"
            style="@style/AppTheme_Slider_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/str_slide_menu_feedback" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white" />
    </LinearLayout>

</ScrollView>